# anirus-cli

./: .gitignore  Cargo.toml
.github/: README.md
src/: anime_handler.rs  fetch.rs  main.rs  scrape.rs  types.rs
src/models/: anime.rs  mod.rs
src/scrapers/: anime_fire.rs  mod.rs
