[package]
name = "anirus-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
reqwest = "0.11.20"
scraper = "0.17.1"
serde_json = "1.0.105"

[dependencies.sqlx]
version = "0.7.1"
features = ["sqlite"]

[dependencies.serde]
version = "1.0.188"
features = ["derive"]

[dependencies.tokio]
version = "1.32.0"
features = ["rt-multi-thread", "macros"]
